@@ -134,7 +134,7 @@ function reportReportsBreak($smarty, $module_name, $local_templates_dir, &$pDB, 
     $oReportsBreak = new paloSantoReportsBreak($pDB);
     //begin grid parameters
     
-    $bElastixNuevo = method_exists('paloSantoGrid','isExportAction');
+    $bElastixNuevo = method_exists('paloSantoGrid','setURL');
 
     $oGrid = new paloSantoGrid($smarty);
     $oGrid->enableExport();   // enable export.
